// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Startup Process Error handling should error on gaiacli crashing async instead of breaking 1`] = `
Array [
  "error",
  Object {
    "message": "The gaiacli rest-server (LCD) experienced an error:
Gaiacli errord asynchronous",
  },
]
`;

exports[`Startup Process Error handling should error on gaiacli crashing on reconnect instead of breaking 1`] = `
Array [
  "error",
  Object {
    "message": "The gaiacli rest-server (LCD) experienced an error:
Some error",
  },
]
`;
